[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Goal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Players/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://separator.png" type="Texture" id=3]
[ext_resource path="res://Objects/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Pong.gd" type="Script" id=5]
[ext_resource path="res://UI/ui_theme.tres" type="Theme" id=8]
[ext_resource path="res://Game/StartMenu.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 326, 5.5 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_levels/5 = false
glow_intensity = 8.0
glow_blend_mode = 0
glow_hdr_luminance_cap = 0.05

[node name="Pong" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -0.0883789
margin_right = 639.912
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftGoal" parent="." instance=ExtResource( 1 )]
position = Vector2( -5, 180 )

[node name="RightGoal" parent="." instance=ExtResource( 1 )]
position = Vector2( 645, 180 )

[node name="LeftPaddle" parent="." instance=ExtResource( 2 )]
pause_mode = 1
modulate = Color( 55, 0, 0, 1 )
position = Vector2( 30, 180 )

[node name="RightPaddle" parent="." instance=ExtResource( 2 )]
pause_mode = 1
modulate = Color( 0, 14.53, 100, 1 )
position = Vector2( 610, 180 )
player = "P2"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 320, 180 )

[node name="P1Score" type="Label" parent="."]
margin_left = 160.0
margin_right = 200.0
margin_bottom = 14.0
theme = ExtResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Score" type="Label" parent="."]
margin_left = 480.0
margin_right = 520.0
margin_bottom = 14.0
theme = ExtResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 320, -5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 320, 365 )
shape = SubResource( 1 )

[node name="StartMenu" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 0.745098 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="StartMenu"]
margin_left = 175.0
margin_top = 168.5
margin_right = 465.0
margin_bottom = 191.5
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="StartMenu"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 1
wait_time = 10.0
autostart = true

[connection signal="timeout" from="StartMenu/StartTimer" to="StartMenu" method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
